--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
         var debrief_script = {
             type: jsPsychHtmlKeyboardResponse,
             stimulus: '<div style="width:800px">Great job! You have finished the experiment.' +
-                '<p> The goal of this experiment is to determine what factors influence the associations between emotions and maps.</p>' +
+                '<p> The goal of this study is to understand how people form associations between visual textures and concepts.</p>' +
+                '<p> To do this, we need to collect data on how people view the uniformity of textures. </p>' +
                 '<p> Please do not inform other potential participants of the hypotheses in our experiment' +
                 '<p> Credit for your participation will be appear on SONA in the next few days.' +
                 '<p> Thank you for participating! You may now close this window.</div>',
