add images side by side

--- a/index.html
+++ b/index.html
@@ -163,8 +163,18 @@
 
                 <br><br> Some of the textures will appear very “non-uniform,” which means that they look different in different parts of the image. The texture to the right is an example of a very non-uniform texture. 
 
-                <br><br> During this experiment, you will see each texture one at a time. Your task is to rate how uniform the texture appears on a scale from “not at all” to “very much,” like the one below. 
+                <br>During this experiment, you will see each texture one at a time. Your task is to rate how uniform the texture appears on a scale from “not at all” to “very much,” like the one below.
 
+<div style="display: flex; justify-content: space-around; margin-bottom: 20px;">
+    <div style="text-align: center;">
+        <img src="uniform_ex.png" alt="Image 1" style="max-width: 500px;">
+        <p>Uniform</p>
+    </div>
+    <div style="text-align: center;">
+        <img src="not_uniform_ex.png" alt="Image 2" style="max-width: 500px;">
+        <p>Not Uniform</p>
+    </div>
+</div>
                 Please think about which image you consider 'very much' \
                 uniform. When you see that image during the experiment, please rate it near the 'very much' endpoint of the
                 scale.<br>Now, please think about which image you consider 'not at all' \
