--- a/index.html
+++ b/index.html
@@ -157,29 +157,25 @@
         var instructions = {
             type: jsPsychHtmlSliderResponse,
             stimulus: `
-            <div style='text-align:center; font-size:20px; line-height:25px; width: 1200px;'>
-                <br> During this experiment you will be presented with images of textures.
-                <br><br> Some of the textures will appear very “uniform,” which means that they appear similar across the whole image. The texture to the left is an example of a very uniform texture. 
+            <div style='text-align:center; font-size:20px; line-height:24px; width: 1200px;'>
+                During this experiment you will be presented with images of textures.
+        <div style="display: flex; align-items: center; justify-content: flex-start; padding-bottom: 0px; margin-bottom: 0px;">
+            <span style="margin-right: 10px;">Some of the textures will appear very “uniform,” which means that they appear similar across the whole image. The texture to the left is an example of a very uniform texture.</span>
+            <img src="uniform_ex.png" alt="Image 1" style="max-width: 75px; margin-left: 10px; display: inline; vertical-align: middle; padding: 0; margin: 0;">
+        </div>
 
-                <br><br> Some of the textures will appear very “non-uniform,” which means that they look different in different parts of the image. The texture to the right is an example of a very non-uniform texture. 
+        <br><br>
+
+        <div style="display: flex; align-items: center; justify-content: flex-start; padding-bottom: 0px; margin-bottom: 0px;">
+            <span style="margin-right: 10px;">Some of the textures will appear very “non-uniform,” which means that they look different in different parts of the image. The texture to the right is an example of a very non-uniform texture.</span>
+            <img src="not_uniform_ex.png" alt="Image 2" style="max-width: 75px; margin-left: 10px; display: inline; vertical-align: middle; padding: 0; margin: 0;">
+        </div>
 
                 <br>During this experiment, you will see each texture one at a time. Your task is to rate how uniform the texture appears on a scale from “not at all” to “very much,” like the one below.
-
-<div style="display: flex; justify-content: space-around; margin-bottom: 20px;">
-    <div style="text-align: center;">
-        <img src="uniform_ex.png" alt="Image 1" style="max-width: 500px;">
-        <p>Uniform</p>
-    </div>
-    <div style="text-align: center;">
-        <img src="not_uniform_ex.png" alt="Image 2" style="max-width: 500px;">
-        <p>Not Uniform</p>
-    </div>
-</div>
-
-                Please think about which image you consider 'very much' \
-                uniform. When you see that image during the experiment, please rate it near the 'very much' endpoint of the
-                scale.<br>Now, please think about which image you consider 'not at all' \
-                uniform. When you see that image during the experiment, please rate it near the 'not at all' endpoint
+                <br><br>Please think about which image you consider 'very uniform' \
+                . When you see that image during the experiment, please rate it near the 'very uniform' endpoint of the
+                scale.<br>Now, please think about which image you consider 'not at all uniform' \
+                . When you see that image during the experiment, please rate it near the 'not at all uniform' endpoint
                 of the scale.<br>
                 Please use the full range of the scale. That is, if an image is somewhat uniform, you would
                 click partway between the middle point and right side of the scale.\
@@ -194,7 +190,7 @@
     <div style="clear: both;"></div>
 </div>
             `,
-            labels: ['Not at all', 'Very Much'],
+            labels: ['Not at all uniform', 'Very uniform'],
             require_movement: false,
             step: 1,
             slider_start: 0,
@@ -206,7 +202,7 @@
                 image_path: 'visual_textures_anchoring.png',
                 practiceTrial: true,
             },
-            slider_width: 500
+            slider_width: 500,
 
         }
             //removed } below; used to be };
@@ -340,7 +336,7 @@
 
         var block_break0 = {
             type: jsPsychHtmlButtonResponse,
-            stimulus: `<div style="width:800px;"><p style="text-align:center">In each block of trials, you will be asked to rate images on their uniformity one-by-one.<br> `,
+            stimulus: `<div style="width:800px;"><p style="text-align:center">In the following trials, you will be asked to rate images on their uniformity one-by-one.<br> `,
             choices: ['Continue'],
         };
         timeline.push(block_break0);
@@ -359,7 +355,7 @@
                                 <img src="${this_texture}" style= "width:200px"alt="img">
                             </div>
                         </div>`,
-                labels: ['Not at all', 'Very Much'],
+                labels: ['Not at all uniform', 'Very uniform'],
                 slider_width: 500,
                 require_movement: false,
                 step: 1,
