pushed data to timeline

--- a/index.html
+++ b/index.html
@@ -416,6 +416,8 @@
             data_string: () => jsPsych.data.get().csv()
         };
 
+        timeline.push(save_data);
+
         //spot for debrief
 
         var debrief_script = {
