--- a/index.html
+++ b/index.html
@@ -403,13 +403,12 @@
         // Final message at the end of the experiment
         var debrief_script = {
             type: jsPsychHtmlButtonResponse,
-            stimulus: "<p>Great Job! You're done rating all textures!<br></br></p>" +
-                '<div style="width:800px">Great job! You have finished the experiment.' +
-                '<p> The goal of this study is to understand how people form associations between visual textures and concepts.</p>' +
-                '<p> To do this, we need to collect data on how people view the uniformity of textures. </p>' +
-                '<p> Please do not inform other potential participants of the hypotheses in our experiment' +
-                '<p> Credit for your participation will be appear on SONA in the next few days.' +
-                '<p> Thank you for participating! You may now close this window.</div>',
+            stimulus: `
+            <div style='text-align:left; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px;'>"<p>Great Job! You're done rating all textures!<br></br>
+                <br> The goal of this study is to understand how people form associations between visual textures and concepts.
+                <br> To do this, we need to collect data on how people view the uniformity of textures.
+                <br> Please do not inform other potential participants of the hypotheses in our experiment.
+                <br> Please click 'Next' in order to receive credit through sona.</div>`,
             choices: ['Next'],
         };
 
@@ -433,7 +432,8 @@
 
         var thank_you = {
             type: jsPsychHtmlKeyboardResponse,
-            stimulus: '<div style="width:800px"> Thank you!',
+            stimulus: `<div style="width:800px"> Thank you!
+                <br><br>Credit for your participation will be appear on SONA in the next few days.`,
             choices: ['NO_KEYS']
         }
 
