formatted slider explanation

--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
         timeline.push(instructions);
         var slider_instructions = {
             type: jsPsychHtmlButtonResponse,
-            stimulus: `<div style="width:800px; margin-left=-100px;"><p style="text-align:center";>To move the slider, click and drag your cursor to the location of the scale where you would like to make your rating and then let go. When you let go of the slider, your response will be recorded and the next trial will begin. <br><br>
+            stimulus: `<div style="width:1200px; margin-top:-150px;"><p style="text-align:center; font-size:24px;">To move the slider, click and drag your cursor to the location of the scale where you would like to make your rating and then let go. <br><br> When you let go of the slider, your response will be recorded and the next trial will begin. <br><br><br>
             We are interested in your initial impressions of each image's uniformity, so please go with your first intuition. <br><br>
-            Before you begin the experiment, there will be four training trials for you to practice using the scale. <br><br>
-            When you are ready to start the training trials, please click "Continue".</p><br></div>`,
+            Before you begin the experiment, there will be four training trials for you to practice using the scale. <br><br><br><br></div>
+            <div style="width:1200px;"><p style="text-align:center; font-size:20px;">When you are ready to start the training trials, please click "Continue".</p></div>`,
             choices: ['Continue']
         }
 
