Added extra texture examples and reformatted uniformity instructions

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             button_label: "Start Experiment",
         };
 
-        timeline.push(consentSign);
+        //timeline.push(consentSign);
 
         // Overview instructions of experiment
         var overview_instructions = {
@@ -153,26 +153,43 @@
             button_label: "Done",
             randomize_question_order: false
         }
-        timeline.push(age_lang_demo);
+        //timeline.push(age_lang_demo);
 
         var uniformity = {
             type: jsPsychHtmlButtonResponse,
-            stimulus: `<div style='text-align:left; font-size:20px; line-height:25px; width: 1200px;'>
-                During this experiment you will be presented with images of textures.
-                <br>
-                <br>
-        <div style="display: flex; align-items: left; justify-content: flex-start; padding-bottom: 0px; margin-bottom: 0px;">
-            <span style="margin-right: 10px;">Some of the textures will appear very 'uniform,' which means that they appear similar across the whole image. The texture to the right is an example of a very uniform texture.</span>
-            <img src="uniform_ex.png" alt="Image 1" style="max-width: 75px; margin-left: 10px; display: inline; vertical-align: middle; padding: 0; margin: 0;">
+            stimulus: `
+    <div style="width:100%; display:flex; justify-content:center; align-items: flex-start; height: 100vh; flex-direction: column; margin-bottom: -100px;">
+        
+        <!-- Centered Header Text -->
+        <div style="width:1200px; text-align:left; font-size:24px; margin-top:-150px; margin-left: 80px;">
+            During this experiment, you will be presented with images of textures.
         </div>
 
-        <br><br>
+        <!-- First Row: Uniform Textures -->
+        <div style="width:1600px; text-align:left; font-size:24px; margin-top: 50px; margin-bottom: 10px;">
+            <div style="display: flex; justify-content: flex-start; align-items: center;">
+                <span style="width:45%; margin-left: 80px; margin-right: 20px;">
+                    Some of the textures will appear very 'uniform,' which means they appear similar across the whole image. 
+                    The textures to the right are examples of very uniform texture.
+                </span>
+                <img src="uniform_ex.png" alt="Uniform Texture" style="width:200px; height:auto; margin-left:120px; margin-right: 20px;">
+                <img src="uniform_ex2.png" alt="New Uniform Texture" style="width:200px; height:auto; margin-left:50px;">
+            </div>
+        </div>
 
-        <div style="display: flex; align-items: left; justify-content: flex-start; padding-bottom: 0px; margin-bottom: 0px;">
-            <span style="margin-right: 10px;">Some of the textures will appear very 'non-uniform,' which means that they look different in different parts of the image. The texture to the right is an example of a very non-uniform texture.</span>
-            <img src="not_uniform_ex.png" alt="Image 2" style="max-width: 75px; margin-left: 10px; display: inline; vertical-align: middle; padding: 0; margin: 0;">
-        </div>`,
-            choices: ['Continue']
+        <!-- Second Row: Non-Uniform Textures -->
+        <div style="width:1600px; text-align:left; font-size:24px; margin-top: 50px; margin-bottom: 10px;">
+            <div style="display: flex; justify-content: flex-start; align-items: center;">
+                <span style="width:45%; margin-left: 80px; margin-right: 20px;">
+                    Some of the textures will appear very 'non-uniform,' which means they look different in different parts of the image. 
+                    The textures to the right are examples of very non-uniform textures.
+                </span>
+                <img src="not_uniform_ex.png" alt="Non-Uniform Texture" style="width:200px; height:auto; margin-left:120px; margin-right: 20px;">
+                <img src="not_uniform_ex2.png" alt="New Non-Uniform Texture" style="width:200px; height:auto; margin-left:50px;">
+            </div>
+            </div>
+    `,
+            choices: ['Continue'],
         }
 
         timeline.push(uniformity);
@@ -182,7 +199,16 @@
             type: jsPsychHtmlSliderResponse,
             stimulus: `
             <div style='text-align:left; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px;'>
-                <br>During this experiment, you will see a series of textures, one at a time, like the ones below. Your task is to rate how uniform the texture appears on a scale from 'not at all uniform' to 'very much uniform,' like the one below.
+                <br>During this experiment, you will see a series of textures, one at a time, like the ones below. 
+            </div>
+                <br>
+                <br>
+                <img src="visual_textures_anchoring.png" alt="img" style="max-width:500px">
+            </div>
+            <div style="clear: both;"></div>
+            </div>
+                <div style='text-align:left; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px;'>
+                <br> Your task is to rate how uniform the texture appears on a scale from 'not at all uniform' to 'very much uniform,' like the one below.
                 <br><br> So you know what 'very much uniform' and 'not at all uniform' means to you in the context of these textures, please think about which textures below you consider 'very much uniform,' and which textures below you consider 'not at all uniform.'
                 <br><br>When you see a texture during the experiment that you consider 'very much uniform', please rate it near the 'very much uniform' endpoint of the
                 scale.<br><br> When you see a texture during the experiment that you consider 'not at all uniform', please rate it near the 'not at all uniform' endpoint
@@ -192,13 +218,6 @@
                 You will be asked to rate each texture on its uniformity.<br><br>Press the
                 'Continue' button for instructions on how to use the slider.\
                  <br><br>
-</div>
-        <br>
-        <br>
-        <img src="visual_textures_anchoring.png" alt="img" style="max-width:500px">
-    </div>
-    <div style="clear: both;"></div>
-</div>
             `,
             labels: ['Not at all <br> uniform', 'Very much <br> uniform'],
             require_movement: false,
