--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         var uniformity = {
             type: jsPsychHtmlButtonResponse,
             stimulus: `
-    <div style="width:100%; display:flex; justify-content:center; align-items: flex-start; height: 100vh; flex-direction: column; margin-bottom: -100px;">
+    <div style="width:100%; display:flex; justify-content:center; align-items: flex-start; height: auto; flex-direction: column; margin-top: 80px; margin-bottom: 50px;">
         
         <!-- Centered Header Text -->
-        <div style="width:1200px; text-align:left; font-size:24px; margin-top:-150px; margin-left: 80px;">
+        <div style="width:1200px; text-align:left; font-size:24px; margin-top:-250px; margin-left: 80px;">
             During this experiment, you will be presented with images of textures.
         </div>
 
