--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div>
                 <br>
                 <br>
-                <img src="anchoring_textures.png" alt="img" style="max-width:500px">
+                <img src="anchoring_visual_textures.png" alt="img" style="max-width:900px">
             </div>
             <div style="clear: both;"></div>
             </div>
